--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.5
   http: ^1.2.1
   another_flushbar: ^1.12.30
+  logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
